just added the container

--- a/Adaptive_Main.storyboard
+++ b/Adaptive_Main.storyboard
@@ -584,33 +584,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JdT-hZ-Opi" userLabel="Gray View">
                                 <rect key="frame" x="0.0" y="64" width="320" height="454"/>
                                 <subviews>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OQC-QU-kbj">
-                                        <rect key="frame" x="0.0" y="-8" width="320" height="454"/>
-                                        <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Kids Crewneck front.png" translatesAutoresizingMaskIntoConstraints="NO" id="L16-K5-RaY">
-                                                <rect key="frame" x="0.0" y="8" width="320" height="360"/>
-                                            </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Kids Crewneck back.png" translatesAutoresizingMaskIntoConstraints="NO" id="30z-bS-yNI">
-                                                <rect key="frame" x="320" y="8" width="320" height="360"/>
-                                            </imageView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="L16-K5-RaY" firstAttribute="width" secondItem="OQC-QU-kbj" secondAttribute="width" id="6uB-po-hfc"/>
-                                            <constraint firstItem="L16-K5-RaY" firstAttribute="width" secondItem="30z-bS-yNI" secondAttribute="width" id="Cs4-2N-R1u"/>
-                                            <constraint firstAttribute="width" constant="320" id="GM4-mZ-fPb"/>
-                                            <constraint firstAttribute="width" secondItem="OQC-QU-kbj" secondAttribute="height" multiplier="160:227" id="TX2-Gb-mGe"/>
-                                            <constraint firstItem="L16-K5-RaY" firstAttribute="height" secondItem="30z-bS-yNI" secondAttribute="height" id="Utf-ed-chQ"/>
-                                            <constraint firstItem="L16-K5-RaY" firstAttribute="height" secondItem="OQC-QU-kbj" secondAttribute="height" id="gPN-7i-YCx"/>
-                                        </constraints>
-                                    </scrollView>
+                                    <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I2s-NC-ec0">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="454"/>
+                                        <connections>
+                                            <segue destination="v7z-TH-El0" kind="embed" id="HC9-C7-8Zw"/>
+                                        </connections>
+                                    </containerView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="OQC-QU-kbj" firstAttribute="leading" secondItem="JdT-hZ-Opi" secondAttribute="leading" id="K2d-yy-Tp0"/>
-                                    <constraint firstAttribute="bottom" secondItem="OQC-QU-kbj" secondAttribute="bottom" constant="8" id="SAg-87-lwH"/>
-                                    <constraint firstItem="OQC-QU-kbj" firstAttribute="top" secondItem="JdT-hZ-Opi" secondAttribute="top" constant="-8" id="gLA-zh-quL"/>
-                                    <constraint firstAttribute="trailing" secondItem="OQC-QU-kbj" secondAttribute="trailing" id="oR2-iR-638"/>
-                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gFX-nw-eyx" userLabel="Orange Bottom Stripe">
                                 <rect key="frame" x="0.0" y="518" width="320" height="50"/>
@@ -714,6 +695,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dd0-9Q-Ku5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1107" y="354"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dts-PP-czW">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="v7z-TH-El0" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Hpw-OU-ZSs"/>
+                        <viewControllerLayoutGuide type="bottom" id="Dge-MQ-u1L"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="E1f-Ky-pWX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="454"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vT5-zK-CvZ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="454"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Kids Crewneck back.png" translatesAutoresizingMaskIntoConstraints="NO" id="ryQ-7m-Ks8">
+                                        <rect key="frame" x="140" y="47" width="320" height="360"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Kids Crewneck front.png" translatesAutoresizingMaskIntoConstraints="NO" id="Do4-Ug-9aV">
+                                        <rect key="frame" x="140" y="47" width="320" height="360"/>
+                                    </imageView>
+                                </subviews>
+                            </scrollView>
+                        </subviews>
+                    </view>
+                    <toolbarItems/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="454"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1r2-PF-Uhf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1601" y="297"/>
         </scene>
     </scenes>
     <resources>
